{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "7da2f617-ebe0-4da0-9180-560887efc6fc",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "0e75988c-d916-4140-9d34-3b7679670982",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ads",
                    "type": "Button",
                    "id": "472c215b-a1eb-4458-bcc9-f1cd5ce3b547",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "887f456a-9cae-49d6-9858-2f5612b73b39",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7d3d413-84a1-4c6e-bea8-6c52a797d95f",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "450b62d5-2828-4abe-9246-65b3aeab25ee",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Control Scheme",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c174fbe-a6c4-4212-bce2-7d9151f169b9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "Ads",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "868c404e-67c9-4f74-bdf2-044ce65ac883",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Control Scheme",
                    "action": "Ads",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "618951e6-2a29-4701-b018-058e59a2efcb",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6a20fb0b-92c8-46d6-be8a-eb92e9c7580f",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "855e2c52-829d-4709-b0d8-05383ce2d819",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a2c914eb-7eac-4548-bd4a-85653ca33c69",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f7f9e5fa-5a44-4657-8b55-1a42e2865224",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "21e600ed-ab2b-4397-802e-8834e00ce447",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Control Scheme",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "a68e1231-fae9-4561-a645-32b6092cdf80",
            "actions": [
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "9c74025c-0012-4657-9f8a-554c1e31e204",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMenuNavigation",
                    "type": "Button",
                    "id": "b2a1615c-a0fc-4462-a9c6-330a3409120b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMenuNavigation",
                    "type": "Button",
                    "id": "08ebe7c8-e025-475d-bf55-e7870a9ffc54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2edaefec-2a0f-4ab6-95be-d02ef55e8ab9",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "435aa386-34e6-4f93-bae3-92526d7022a2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Control Scheme",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4da6cff-7e37-486e-8530-471b78a87c7b",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "RightMenuNavigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69beeb8d-e1bc-44b3-a920-284d7d5f2fb3",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Control Scheme",
                    "action": "RightMenuNavigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3db2a01-c028-410d-9b69-e9f1b2aa844e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller Control Scheme",
                    "action": "LeftMenuNavigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1354774f-0535-4e42-9023-62557a9f9588",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Control Scheme",
                    "action": "LeftMenuNavigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller Control Scheme",
            "bindingGroup": "Controller Control Scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse Control Scheme",
            "bindingGroup": "Mouse Control Scheme",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}